--- a/_posts/0000-01-02-J0el007.md
+++ b/_posts/0000-01-02-J0el007.md
@@ -1,3 +1,14 @@
+
+
+
+
+
+
+
+
+
+
+
 ---
 
 layout: slide
@@ -6,7 +17,6 @@ title: "Welcome to our second slide!"
 
 ---
 
-Your text
+iam strong but iam tired!
 
 Use the left arrow to go back!
-
